--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase": "^11.0.2",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-spinner": "^1.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
