--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.7.9",
     "firebase": "^11.0.2",
     "pinia": "^2.3.0",
+    "vee-validate": "^4.14.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue-spinner": "^1.0.4"
+    "vue-spinner": "^1.0.4",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
